# opencv4_cpp

./: README.md
ch6/: CMakeLists.txt
ch6/include/: mwindow.hpp  utils.hpp  utils.inl
ch6/model/: bayes.xml  boost.xml  svm.xml
ch6/src/: CMakeLists.txt  main.cpp  mwindow.cpp  utils.cpp
